# core-bioreaction-simulation

./: .gitignore  README.md  requirements.txt  requirments.txt  run.py  setup.cfg
notebooks/: leap_invest.ipynb  new_sim_workbench.ipynb  test_signal.ipynb  test_small.json  testing.ipynb  tutorial_for_sim.ipynb
scripts/playground/: misc.py  simple_circuit.fasta  simple_config.json  simple_reaction.py
scripts/playground_signals/: signal_reaction.py  simple_config.json
src/bioreaction/: __init__.py  setup.cfg
src/bioreaction/bioreactions/: __init__.py  data_containers.py
src/bioreaction/misc/: __init__.py  misc.py  templates.py
src/bioreaction/model/: __init__.py  data_containers.py  data_tools.py  templates.py
src/bioreaction/simulation/: __init__.py  basic_sim.py  log_writing.py  manager.py  med_sim.py
src/bioreaction/simulation/simfuncs/: __init__.py  basic_de.py  signal.py  signal_de.py
src/bioreaction/utils/data/: load.py
src/bioreactions/: data_containers.py
src/simulation/: manager.py
tests/: test_model.py
